// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-navigation Components MenuItem Renders MenuItem 1`] = `
.c0 {
  font: inherit;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 50px;
  padding: 0 7px;
  margin-bottom: 2px;
  color: #text_inverted;
  background-color: #surface;
  border-width: 0 0 0 4px;
  border-style: solid;
  border-color: transparent;
  outline: none;
  cursor: pointer;
}

.c0:hover {
  color: #text;
}

.c2 {
  font-size: .875em;
  font-weight: bold;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 128px;
  padding: 0 7px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1.c1.c1 {
  font-size: 1.25em;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25px;
}

<button
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <i />
  </div>
  <div
    className="c2"
  >
    Label
  </div>
</button>
`;

exports[`ui-elements-navigation Components MenuItem Renders with appropriate colors if active prop is set 1`] = `
.c0 {
  font: inherit;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 50px;
  padding: 0 7px;
  margin-bottom: 2px;
  color: #text;
  background-color: #surface;
  border-width: 0 0 0 4px;
  border-style: solid;
  border-color: #active;
  outline: none;
  cursor: pointer;
}

.c0:hover {
  color: #text;
}

.c2 {
  font-size: .875em;
  font-weight: bold;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 128px;
  padding: 0 7px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1.c1.c1 {
  font-size: 1.25em;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25px;
}

<button
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <i />
  </div>
  <div
    className="c2"
  />
</button>
`;
